# hyper-track

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py  routes.py  schemas.py
migrations/: 001_initial.sql  002_indexes.sql  003_materialized_views.sql
scripts/: dev.sh  discover_leaderboard.py  discover_vaults.py  import_addresses.py  migrate.py
src/hyper_track/: cache.py  client.py  config.py  db.py  models.py  scorer.py  seeds.py  worker.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: AddressCell.tsx  DiscoverPanel.tsx  Header.tsx  InfoTerm.tsx  LeaderboardTable.tsx  MethodologyModal.tsx  NumberCell.tsx  ScoreBadge.tsx  ScoreBreakdown.tsx  StyleBadge.tsx  SubmitWallet.tsx  Tooltip.tsx
web/app/hooks/: useAutoRefresh.ts
web/app/wallet/[address]/: page.tsx
web/lib/: api.ts  glossary.ts  utils.ts
